--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for task in todo_list %}
+            {% for task in tasks %}
             <tr>
                 <td>{{ task.id }}</td>
                 <td>{{ task.title }}</td>
